[metadata]
name = aws-butler
version = 0.1.1
author = Alban King
description = CLI tools to simplify common tasks with aws

[options]
py_modules = cloudwatch, parameters
install_requires = 
    boto3
    click
    tabulate
python_requires = >= 3.10

[options.entry_points]
console_scripts = 
    cloudwatch=cloudwatch:main
    parameters=parameters:main
