[metadata]
name = aws-butler
version = 0.1.2
author = Alban King
description = CLI tools to simplify common tasks with aws

[options]
py_modules = cloudwatch, parameters
install_requires =
    boto3
    click
    tabulate
    python-dotenv
python_requires = >= 3.10

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts = 
    cloudwatch=cloudwatch:main
    parameters=parameters:main
